--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,11 +2,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" >
 
+    <!-- 기존 권한들… -->
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
         android:maxSdkVersion="32"/>
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS"/>
+
+
+    <uses-feature android:name="android.hardware.telephony" android:required="false"/>
+
 
     <application
         android:usesCleartextTraffic="true"
@@ -19,20 +25,56 @@
         android:supportsRtl="false"
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31" >
+
         <activity
             android:name=".SplashActivity"
             android:exported="true" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <activity android:name=".MainActivity" />
+        <activity android:name=".RegisterActivity1" />
+        <activity android:name=".RegisterActivity2" />
+        <activity android:name=".CallingActivity" />
+
+        <activity
+            android:name=".ProjectionRequestActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".SettingActivity"
+            android:exported="false" />
+
+        <service
+            android:name=".MyInCallService"
+            android:exported="true"
+            android:permission="android.permission.BIND_INCALL_SERVICE">
+            <intent-filter>
+                <action android:name="android.telecom.InCallService"/>
+            </intent-filter>
+            <meta-data
+                android:name="android.telecom.inCallService"
+                android:resource="@xml/incallservice"/>
+        </service>
+
+        <activity
+            android:name=".CallActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"></activity>
-        <activity android:name=".RegisterActivity1"></activity>
-        <activity android:name=".RegisterActivity2"></activity>
-        <activity android:name=".CallActivity"></activity>
-        <activity android:name=".CallingActivity"></activity>
+
+        <service
+            android:name=".AudioCaptureService"
+            android:enabled="true"
+            android:exported="false"
+            android:foregroundServiceType="mediaProjection" />
 
     </application>
 
